# mcp.science

./: .all-contributorsrc  CITATION.cff  README.md  pyproject.toml
.github/codex/home/sessions/: rollout-2025-06-12T07-25-23-cd406593-32bd-4c06-9add-adbb9515ff03.jsonl  rollout-2025-06-20T07-53-43-b776621b-eb18-4121-8b9c-83356c760d5a.jsonl
.github/workflows/: auto-submit-to-mcpm.yml
docs/: available_servers.md  build_your_own_mcp_server.md  contributing.md  how-to-build-your-own-mcp-server-step-by-step.md  integrate-mcp-server-hand-over-hand.md  integrate-mcp-server-step-by-step.md  quickstart.md
servers/gpaw-computation/: .all-contributorsrc  CITATION.cff  README.md
servers/gpaw-computation/src/gpaw_computation/: server.py
servers/gpaw_computation/scripts/: calculation_utils.py  check_calculation_result.py  data_class.py  get_project_summary.py  run_calculation.py
servers/jupyter-act/: README.md
servers/jupyter-code-execution/: README.md  pyproject.toml
servers/jupyter-code-execution/src/jupyter_code_execution/: __init__.py  schema.py  server.py  utils.py
servers/materials-project/: .all-contributorsrc  CITATION.cff  README.md
servers/materials-project/src/materials_project/: __init__.py  server.py
servers/materials_project/: README.md
servers/materials_project/src/mcp_materials_project/: server.py
servers/mathematica-check/: README.md  pyproject.toml
servers/mathematica-check/src/: server.py
servers/matlab-server/: README.md  pyproject.toml  setup.py
servers/matlab-server/src/matlab_server/: server.py
servers/matlab-server/tests/: test_server.py
servers/nemad/src/nemad/: server.py
servers/netket/: DEVELOP.md  README.md  mcp_server.py
servers/netket-mcp/: README.md  requirements.txt
servers/netket-mcp/.cursor/: mcp.json
servers/netket/.cursor/: mcp.json
servers/netket/src/netket/: mcp_server.py
servers/netket/test-seed-tools/: test_json_manager.ipynb  test_schemas.ipynb
servers/python-code-execution/: README.md  pyproject.toml
servers/python-code-execution/src/python_code_execution/: __init__.py  local_python_executor.py  safe_execute.py  schemas.py  server.py
servers/quantum-computation/: README.md  pyproject.toml
servers/quantum-computation/server_package/: README.md  pyproject.toml
servers/quantum-computation/src/quantum_computation/: __init__.py  server.py  ssh_utils.py
servers/quantum-computation/src/quantum_computation/config/: settings.toml
servers/quantum-computation/src/quantum_computation/server_package/: pyproject.toml
servers/quantum-computation/src/quantum_computation/server_package/quantum_computation/create_calculation_project/: __main__.py
servers/quantum-computation/src/quantum_computation/server_package/quantum_computation/create_calculation_result/: __main__.py
servers/quantum-computation/src/quantum_computation/server_package/quantum_computation/gpaw_utils/: lib.py
servers/quantum_computation/: pyproject.toml
servers/quantum_computation/src/quantum_computation/: __init__.py  server.py
servers/quantum_computation/src/quantum_computation/scripts/: README.md  calculation_utils.py  check_calculation_result.py  create_calculation_project.py  data_class.py  main_create_calculation_project.py  main_get_project_summary.py  main_run_calculation.py  requirements.txt  run_calculation.py
servers/quantum_computation/src/quantum_computation/scripts/gpaw_utils/: lib.py
servers/quantum_computation/src/quantum_computation/server_package/quantum_computation/: __init__.py  main_create_calculation_project.py
servers/ssh-exec/: README.md
servers/ssh-exec/src/ssh_exec/: server.py  ssh_client.py
servers/timer/: pyproject.toml
servers/timer/src/timer/: main.py
servers/tinydb-server/: README.md  pyproject.toml
servers/tinydb-server/src/tinydb_server/: main.py
servers/tinydb-server/tests/: test_main.py
servers/txyz-search/src/txyz_search/: server.py
servers/web-fetch/: pyproject.toml
servers/web-fetch/src/web_fetch/: __init__.py  fetch.py
src/mcp_science/: __init__.py
src/servers/web_fetch/: __init__.py  fetch.py
