[project]
name = "jupyter-code-execution"
version = "0.1.0"
description = "Jupyter MCP Server for Code Execution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-client>=8.6.3",
    "jupyter-server>=2.16.0",
    "mcp[cli]>=1.9.0",
    "y-py>=0.6.2",
    "requests>=2.32.3",
]

[project.scripts]
mcp-jupyter-code-execution = "jupyter_code_execution:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=9.2.0",
    "pyright>=1.1.389",
    "ruff>=0.7.3",
]
