[project]
name = "quantum-computation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GabrielDrapor", email = "gabrieldrapor@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.10",
    "ipython>=9.1.0",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "mp-api>=0.45.3",
    "pymatgen>=2025.3.10",
]

[project.scripts]
mcp-quantum-computation = "quantum_computation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
